| Bug #19148 | Backup causes cluster down if _really_ early abort happens | ||
|---|---|---|---|
| Submitted: | 17 Apr 2006 22:03 | Modified: | 2 Nov 2006 6:08 |
| Reporter: | Serge Kozlov | ||
| Status: | Closed | ||
| Category: | Server: Cluster | Severity: | S2 (Serious) |
| Version: | 5.1 | OS: | Linux (Linux FC4) |
| Assigned to: | Bugs System | Target Version: | |
[17 Apr 2006 22:03]
Serge Kozlov
[20 Apr 2006 10:19]
Tomas Ulin
Cluster handles wrong configurations by shutting down nodes Part of setting up cluster for an application is to test out which applicaiton that works. This is not something that will change anytime soon. However you should get an appropriate error message when the node goes down. I'm therefore relableing the bug and setting different prio
[27 Apr 2006 7:53]
Tomas Ulin
added wrong error message to 17297
[18 Oct 2006 8:52]
Stewart Smith
Have patch for 5.1 that works (with additional test case in autotest). Now just checking with 5.0. Not going to check 4.1 as only really caused by incorrect configuration (that can be fixed with online upgrade).
[18 Oct 2006 10:09]
Stewart Smith
doesn't affect 5.0 (from quick test)
[18 Oct 2006 10:19]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/13845 ChangeSet@1.2314, 2006-10-18 18:19:16+10:00, stewart@willster.(none) +4 -0 Bug #19148 Backup causes cluster down if _really_ early abort happens Early abort, failing to allocate buffers, would go down the abort track and end up trying to sendDropTriggers (as the standard stop backup does). However, it is possible to not have any tables yet defined in the backup (due to allocating buffers is before this). Simple check in sendDropTrig (and continue to next step). Files may be open, so we continue to close them. Also updated ERROR_Codes (and added one to test this bug).
[18 Oct 2006 10:24]
Stewart Smith
approved by Jonas, pushed to 5.1-ndb
[1 Nov 2006 15:51]
Jonas Oreland
pushed into 5.1.13
[2 Nov 2006 6:08]
Jon Stephens
Thank you for your bug report. This issue has been committed to our source repository of
that product and will be incorporated into the next release.
If necessary, you can access the source repository and build the latest available version,
including the bug fix. More information about accessing the source trees is available at
http://dev.mysql.com/doc/en/installing-source.html
Documented fix for 5.1.13.
