storage/ndb/src/kernel/blocks/backup/Backup.hpp
@@ -427,6 +427,7 @@ public:
       : slaveState(b, validSlaveTransitions, validSlaveTransitionsCount,1)
       , tables(tp), triggers(trp), files(bp)
       , masterData(b), backup(b)
+      , ctlFilePtr(RNIL), logFilePtr(RNIL), dataFilePtr(RNIL)
       {
       }
     
